--- a/style.scss
+++ b/style.scss
@@ -75,8 +75,34 @@ header {
 	}
 }
 .container {
-	max-width: 540px;
+	max-width: calc(100% - 100px);
 	margin: 0 auto;
+}
+
+#iso-flags {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1%;
+
+	> div {
+		flex: 1 1 calc(100% / 1 - 1%);
+
+		@media screen and (min-width: 640px) {
+			flex: 1 1 calc(100% / 2 - 1%);
+		}
+
+		@media screen and (min-width: 860px) {
+			flex: 1 1 calc(100% / 3 - 1%);
+		}
+
+		@media screen and (min-width: 1200px) {
+			flex: 1 1 calc(100% / 4 - 1%);
+		}
+
+		@media screen and (min-width: 1600px) {
+			flex: 1 1 calc(100% / 5 - 1%);
+		}
+	}
 }
 
 .hide {
