--- a/style.scss
+++ b/style.scss
@@ -81,26 +81,35 @@ header {
 
 #iso-flags {
 	display: flex;
+	justify-content: center;
 	flex-wrap: wrap;
-	gap: 1%;
+
+	@media screen and (min-width: 640px) {
+		gap: 1%;
+	}
 
 	> div {
-		flex: 1 1 calc(100% / 1 - 1%);
+		flex: 1 1 calc(100% / 1);
+		max-width: calc(100% / 1);
 
 		@media screen and (min-width: 640px) {
 			flex: 1 1 calc(100% / 2 - 1%);
+			max-width: calc(100% / 2 - 1%);
 		}
 
 		@media screen and (min-width: 860px) {
 			flex: 1 1 calc(100% / 3 - 1%);
+			max-width: calc(100% / 3 - 1%);
 		}
 
 		@media screen and (min-width: 1200px) {
 			flex: 1 1 calc(100% / 4 - 1%);
+			max-width: calc(100% / 4 - 1%);
 		}
 
 		@media screen and (min-width: 1600px) {
 			flex: 1 1 calc(100% / 5 - 1%);
+			max-width: calc(100% / 5 - 1%);
 		}
 	}
 }
