removes gap under flag caused by wrapping it in a button

--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,8 @@ body {
 		border-color: transparent;
 		background-color: transparent;
 		cursor: pointer;
+		// REMOVE GAP UNDER BUTTON
+		display: block;
 	}
 
 	&-img {
